modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/image-pull-policy/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8ImagePullPolicy
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
  parameters:
    policy: Always
