modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/image-pull-policy/rendered/test_samples/pods/002-example-disallowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed
    namespace: testns
spec:
    containers:
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: nginx
