modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/image-pull-policy/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8imagepullpolicy
tests:
  - name: d8imagepullpolicy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: example-allowed
        object: test_samples/pods/001-example-allowed.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed
        object: test_samples/pods/002-example-disallowed.yaml
        assertions:
          - message: 'Container <nginx> in your Pod <disallowed> has invalid pull policy: <IfNotPresent>'
            violations: "yes"
